--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ go.work
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,go
 .vscode/launch.json
 observable.log
+borker.log
