--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ go.work
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,go
+.vscode/launch.json
+observable.log
+borker.log
